force-app/main/default/objects/Student_Feedback__c/fields/CE_Session__c.field-meta.xml
<CustomField>
    <fullName>CE_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CE-Session</label>
    <referenceTo>CE_Session__c</referenceTo>
    <relationshipLabel>Students Feedback</relationshipLabel>
    <relationshipName>Students_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>