force-app/main/default/objects/Student_Feedback__c/fields/Course_Master__c.field-meta.xml
<CustomField>
    <fullName>Course_Master__c</fullName>
    <label>Course Master</label>
    <referenceTo>Course_Master__c</referenceTo>
    <relationshipLabel>Students Feedback</relationshipLabel>
    <relationshipName>Students_Feedback</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>