force-app/main/default/objects/Student_Feedback__c/fields/Given_By__c.field-meta.xml
<CustomField>
    <fullName>Given_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Given By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Students Feedback</relationshipLabel>
    <relationshipName>Students_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>