force-app/main/default/objects/Student_Feedback__c/fields/Mentor_Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Course_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor Course Enrollment</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Students Feedback (Mentor Course Enrollment)</relationshipLabel>
    <relationshipName>Students_Feedback1</relationshipName>
    <type>Lookup</type>
</CustomField>