force-app/main/default/objects/Student_Feedback__c/fields/Student_Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Student_Course_Enrollment__c</fullName>
    <label>Student Course Enrollment</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Students Feedback</relationshipLabel>
    <relationshipName>Students_Feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>