force-app/main/default/objects/Student_Feedback__c/fields/Student_Rating__c.field-meta.xml
<CustomField>
    <fullName>Student_Rating__c</fullName>
    <label>Student Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>