force-app/main/default/objects/Student_Feedback__c/validationRules/Rating_Should_be_Less_than_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Should_be_Less_than_5</fullName>
    <active>true</active>
    <errorConditionFormula>Student_Rating__c  &gt; 5</errorConditionFormula>
    <errorMessage>Rating should be Less than or Equal to 5</errorMessage>
</ValidationRule>