force-app/main/default/objects/Student_Feedback__c/listViews/Student_Feedback_Rec.listView-meta.xml
<ListView>
    <fullName>Student_Feedback_Rec</fullName>
    <columns>NAME</columns>
    <columns>Course_Master__c</columns>
    <columns>CE_Session__c</columns>
    <columns>Given_By__c</columns>
    <columns>Mentor_Course_Enrollment__c</columns>
    <columns>Student_Course_Enrollment__c</columns>
    <columns>Student_Rating__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Student Feedback Rec</label>
</ListView>